--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "author": "Xander T",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "colors": "^1.4.0",
     "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
